[button:radio] Fix vertical and horizontal alignment

--- a/src/components/discovery-button/discovery-button.scss
+++ b/src/components/discovery-button/discovery-button.scss
@@ -23,6 +23,10 @@
   .button-wrapper {
     width: 100%;
     text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
 
     button.discovery-btn {
       margin: .25rem .125rem;
@@ -40,10 +44,6 @@
       background-color: var(--warp-view-button-bg-color, $w10-blue);
       min-width: var(--warp-view-button-width, auto);
       border-radius: var(--warp-view-button-border-radius, 0.25rem);
-      position: absolute;  
-      top: 50%;  
-      left: 50%;
-      transform: translate(-50%, -50%);
     }
   }
 
